--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -10,16 +10,52 @@
 		<div class="main">
 			<div class="login_section">
 				<div class="info">
-					<form method="post">
+					<!-- <form method="post">
 						<span class="login_title">Welcome</span>
 						<span class="login_logo">
 							<img src="{% static 'images/login_logo.jpg' %}" alt="logo">
 						</span>
-						<!-- For security, to prevent CSRF attacks -->
+						For security, to prevent CSRF attacks
 						{% csrf_token %}
-						<!-- Form content will be outputted between <p> tags -->
+						Form content will be outputted between <p> tags
 						{{ form.as_p }}
-						<button type="submit">Login</button>
+						<form method="post" action="{% url 'home' %}">
+							{% csrf_token %}
+							<table>
+							<tr>
+							    <td>{{ form.username.label_tag }}</td>
+							    <td>{{ form.username }}</td>
+							</tr>
+							<tr>
+							    <td>{{ form.password.label_tag }}</td>
+							    <td>{{ form.password }}</td>
+							</tr>
+							</table>
+
+						<div class="login_input">
+							<input class="form-control" value="Username" type="text" name="{{ form.username.label }}">
+						</div>
+
+						<div class="login_input">
+							<input class="form-control" value="Password" type="password" name="{{ form.password.label }}">
+						</div>
+
+						<input type="submit" value="login">
+						<input type="hidden" name="next" value="{{ next }}">
+						</form>
+					</form> -->
+					<form role="form" class="form-horizontal" method="post" action="{% url 'login' %}">{% csrf_token %}
+						<div class="form-group">
+							{% for field in form %}
+							<div class="input-group">
+								<span class="input-group-addon" style="background-color:#b77b48; color:white"><span class="glyphicon glyphicon-user"></span></span>
+								<input class="form-control" id="{{ field.id_for_label }}" maxlength="30" name="{{ field.html_name }}" value="{{ field.value }}" type="text" /> 
+								{{ field.errors }}
+							</div>
+							{% endfor %}
+							<input type="submit" class="btn btn-primary" value="login" />
+							<input type="hidden" name="next" value="{{ next }}" />
+						</div>
 					</form>
 				</div>
 			</div>
