--- a/Project/DjangoProj/static/css/Custom/Login2.css
+++ b/Project/DjangoProj/static/css/Custom/Login2.css
@@ -38,6 +38,10 @@ body
   align-items: center;
   padding: 15px;
   background: #fff; 
+
+  /*width: 390px;
+  background: #fff;
+  padding-bottom: 3em;*/
 }
 
 .info 
@@ -47,28 +51,34 @@ body
   padding: 2em;
   min-height: 100%;
   */
-  width: 390px;
-  background: #fff;
-  padding-bottom: 3em;
+
 }
 
 .login_input
-{/*
+{
   width: 100%;
   position: relative;
-  
-  border-bottom: 2px solid #d9d9d9;*/
-
 }
 
-#id_password
+.field
 {
-  display: none;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+.field:focus 
+{
+  border: 3px solid #555;
 }
 
 .login_title
 {
-  text-decoration: underline;
   font-weight: bold;
   display: block;
   font-size: 2em;
