--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -3,24 +3,51 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Login</title>
-		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-		<link rel="stylesheet" href="{% static 'css/Custom/Login.css' %}">
+		<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
+		<link rel="stylesheet" href="{% static 'css/Custom/Login2.css' %}">
 	</head>
 	<body>
 		<div class="main">
 			<div class="login_section">
 				<div class="info">
-					<!-- <form method="post">
+					<form method="post">
 						<span class="login_title">Welcome</span>
 						<span class="login_logo">
 							<img src="{% static 'images/login_logo.jpg' %}" alt="logo">
 						</span>
-						For security, to prevent CSRF attacks
+						<!-- For security, to prevent CSRF attacks -->
 						{% csrf_token %}
-						Form content will be outputted between <p> tags
-						{{ form.as_p }}
-						<form method="post" action="{% url 'home' %}">
-							{% csrf_token %}
+						<div class="login_input">
+							<input class="field" id="{{ form.username.id_for_label }}" maxlength="30" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
+						</div>
+
+						<div class="login_input">
+							<input class="field" id="{{ form.password.id_for_label }}" maxlength="30" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
+						</div>
+
+						<input type="submit" class="btn btn-primary" value="login" />
+						<input type="hidden" name="next" value="{{ next }}" />
+					</form>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
+
+
+
+
+
+
+
+
+						<!-- Form content will be outputted between <p> tags -->
+						<!-- {{ form.as_p }} -->
+						<!-- <form method="post" action="{% url 'home' %}"> -->
+
+
+
+					<!-- 		{% csrf_token %}
 							<table>
 							<tr>
 							    <td>{{ form.username.label_tag }}</td>
@@ -42,12 +69,20 @@
 
 						<input type="submit" value="login">
 						<input type="hidden" name="next" value="{{ next }}">
-						</form>
-					</form> -->
-					<form role="form" class="form-horizontal" method="post" action="{% url 'login' %}">{% csrf_token %}
+						</form> -->
+					
+				<!-- 	<form role="form" class="form-horizontal" method="post" action="{% url 'login' %}">
+						{% csrf_token %}
 						<div class="form-group">
+							<div class="login_input">
+								<input class="form-control" id="{{ form.username.id_for_label }}" maxlength="30" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
+							</div>
+
+							<div class="login_input">
+								<input class="login_input" id="{{ form.password.id_for_label }}" maxlength="30" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
+							</div>
 							{% for field in form %}
-							<div class="input-group">
+							<div class="login_input">
 								<span class="input-group-addon" style="background-color:#b77b48; color:white"><span class="glyphicon glyphicon-user"></span></span>
 								<input class="form-control" id="{{ field.id_for_label }}" maxlength="30" name="{{ field.html_name }}" value="{{ field.value }}" type="text" /> 
 								{{ field.errors }}
@@ -56,9 +91,4 @@
 							<input type="submit" class="btn btn-primary" value="login" />
 							<input type="hidden" name="next" value="{{ next }}" />
 						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
+					</form> -->
