--- a/Project/DjangoProj/static/css/Custom/Login2.css
+++ b/Project/DjangoProj/static/css/Custom/Login2.css
@@ -18,14 +18,6 @@ body
 
 .login_section
 {
- /* background: #f1f1f1;
-  max-width: 80%;
-  position: absolute;
-  padding: 10em;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-*/
   width: 100%;  
   min-height: 100vh;
   display: -webkit-box;
@@ -36,22 +28,7 @@ body
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
   background: #fff; 
-
-  /*width: 390px;
-  background: #fff;
-  padding-bottom: 3em;*/
-}
-
-.info 
-{/*
-  background-color: white;
-  margin: 0.5em;
-  padding: 2em;
-  min-height: 100%;
-  */
-
 }
 
 .login_input
@@ -63,13 +40,18 @@ body
 .field
 {
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+  padding: 0.8em 0 0.5em 0.5em;
   border: 3px solid #ccc;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
+  border-radius: 4px;
+}
+
+.field:first-child
+{
+  margin-top: 0.2em;
+  margin-bottom: 0.3em;
 }
 
 .field:focus 
@@ -102,17 +84,55 @@ body
   height: auto;
 }
 
+.button 
+{
+  vertical-align: middle;
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #19abd4;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 1.5em;
+  padding: 0.5em;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 0.6em;
+}
+
+.button span 
+{
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after 
+{
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span 
+{
+  padding-right: 25px;
+}
+
+.button:hover span:after
+{
+  opacity: 1;
+  right: 0;
+}
+
 .main:after
 {
   content: "";
   display: table;
   clear: both;
-}
-
-/*MIGHT NOT NEED!!*/
-form
-{
-  padding-left:
-  width: 100%;
-  padding: 0 5em 0 5em;
 }
