--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -9,86 +9,24 @@
 	<body>
 		<div class="main">
 			<div class="login_section">
-				<div class="info">
-					<form method="post">
-						<span class="login_title">Welcome</span>
-						<span class="login_logo">
-							<img src="{% static 'images/login_logo.jpg' %}" alt="logo">
-						</span>
-						<!-- For security, to prevent CSRF attacks -->
-						{% csrf_token %}
-						<div class="login_input">
-							<input class="field" id="{{ form.username.id_for_label }}" maxlength="30" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
-						</div>
+				<form method="post">
+					<span class="login_title">Welcome</span>
+					<span class="login_logo">
+						<img src="{% static 'images/login_logo.jpg' %}" alt="logo">
+					</span>
+					<!-- For security, to prevent CSRF attacks -->
+					{% csrf_token %}
+					<div class="login_input">
+						<input class="field" id="{{ form.username.id_for_label }}" maxlength="30" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
+					</div>
 
-						<div class="login_input">
-							<input class="field" id="{{ form.password.id_for_label }}" maxlength="30" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
-						</div>
+					<div class="login_input">
+						<input class="field" id="{{ form.password.id_for_label }}" maxlength="30" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
+					</div>
 
-						<input type="submit" class="btn btn-primary" value="login" />
-						<input type="hidden" name="next" value="{{ next }}" />
-					</form>
-				</div>
+					<button class="button" type="submit"><span>Login </span></button>
+				</form>
 			</div>
 		</div>
 	</body>
 </html>
-
-
-
-
-
-
-
-
-						<!-- Form content will be outputted between <p> tags -->
-						<!-- {{ form.as_p }} -->
-						<!-- <form method="post" action="{% url 'home' %}"> -->
-
-
-
-					<!-- 		{% csrf_token %}
-							<table>
-							<tr>
-							    <td>{{ form.username.label_tag }}</td>
-							    <td>{{ form.username }}</td>
-							</tr>
-							<tr>
-							    <td>{{ form.password.label_tag }}</td>
-							    <td>{{ form.password }}</td>
-							</tr>
-							</table>
-
-						<div class="login_input">
-							<input class="form-control" value="Username" type="text" name="{{ form.username.label }}">
-						</div>
-
-						<div class="login_input">
-							<input class="form-control" value="Password" type="password" name="{{ form.password.label }}">
-						</div>
-
-						<input type="submit" value="login">
-						<input type="hidden" name="next" value="{{ next }}">
-						</form> -->
-					
-				<!-- 	<form role="form" class="form-horizontal" method="post" action="{% url 'login' %}">
-						{% csrf_token %}
-						<div class="form-group">
-							<div class="login_input">
-								<input class="form-control" id="{{ form.username.id_for_label }}" maxlength="30" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
-							</div>
-
-							<div class="login_input">
-								<input class="login_input" id="{{ form.password.id_for_label }}" maxlength="30" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
-							</div>
-							{% for field in form %}
-							<div class="login_input">
-								<span class="input-group-addon" style="background-color:#b77b48; color:white"><span class="glyphicon glyphicon-user"></span></span>
-								<input class="form-control" id="{{ field.id_for_label }}" maxlength="30" name="{{ field.html_name }}" value="{{ field.value }}" type="text" /> 
-								{{ field.errors }}
-							</div>
-							{% endfor %}
-							<input type="submit" class="btn btn-primary" value="login" />
-							<input type="hidden" name="next" value="{{ next }}" />
-						</div>
-					</form> -->
