--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Login</title>
-		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+		<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
 		<link rel="stylesheet" href="{% static 'css/Custom/Login2.css' %}">
 	</head>
 	<body>
@@ -17,24 +17,15 @@
 					<!-- For security, to prevent CSRF attacks -->
 					{% csrf_token %}
 					{% if form.errors %}
-						<!-- <span class="validation">Incorrect Username or Password</span> -->
-						<div class="validation alert alert-danger" role="alert">
+						<div class="validation" role="alert">
 							Incorrect Username or Password
 						</div>
 					{% endif %}
 					<div class="login_input">
-					{% if form.username.errors %}
-						<ul>
-						{% for error in form.username.errors %}
-							<li>{{ error }}</li>
-						{% endfor %}
-						</ul>
-					{% endif %}
 						<input class="field" id="{{ form.username.id_for_label }}" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
 					</div>
 
 					<div class="login_input">
-						{{ form.password.errors }}
 						<input class="field" id="{{ form.password.id_for_label }}" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
 					</div>
 
