login page finally finished

--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -22,11 +22,11 @@
 						</div>
 					{% endif %}
 					<div class="login_input">
-						<input class="field" id="{{ form.username.id_for_label }}" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
+						<input class="field" id="{{ form.username.id_for_label }}" value="" name="{{ form.username.html_name }}" placeholder="Username" type="text" /> 
 					</div>
 
 					<div class="login_input">
-						<input class="field" id="{{ form.password.id_for_label }}" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
+						<input class="field" id="{{ form.password.id_for_label }}" value="" name="{{ form.password.html_name }}" placeholder="Password" type="password" />
 					</div>
 
 					<button class="button" type="submit"><span>Login </span></button>
