--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -65,47 +65,48 @@
           <!-- {{ Createform.as_p }} -->
           <div class="left_section">
             <div class="info">
+            <h4>Patient Info</h4>
               <div class="field">
-                <input class="" id="{{ Createform.patient_name.id_for_label }}" name="{{ Createform.patient_name.html_name }}" placeholder="Patient Name" type="text" />
+                {{ Createform.patient_name }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.DOB.id_for_label }}" name="{{ Createform.DOB.html_name }}" placeholder="Date Of Birth" type="date" /> 
+                {{ Createform.DOB }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.age.id_for_label }}" name="{{ Createform.age.html_name }}" placeholder="Age" type="number" /> 
+                {{ Createform.age }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.sex.id_for_label }}" name="{{ Createform.sex.html_name }}" placeholder="Sex" type="text" /> 
+                {{ Createform.sex }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.occupation.id_for_label }}" name="{{ Createform.occupation.html_name }}" placeholder="Occupation" type="text" /> 
+                {{ Createform.occupation }} 
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.marital_status.id_for_label }}" name="{{ Createform.marital_status.html_name }}" placeholder="Marital Status" type="text" />
+                {{ Createform.marital_status }}
               </div>
             </div>
           </div>
           <div class="right_section">
             <div class="info">
+            <h4>Contact Info</h4>
               <div class="field">
-                <input class="field" id="{{ Createform.address_line1.id_for_label }}" name="{{ Createform.address_line1.html_name }}" placeholder="Address Line 1" type="text" /> 
+                {{ Createform.address_line1 }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.address_line2.id_for_label }}" name="{{ Createform.address_line2.html_name }}" placeholder="Address Line 2" type="text" /> 
+                {{ Createform.address_line2 }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.address_line3.id_for_label }}" name="{{ Createform.address_line3.html_name }}" placeholder="Address Line 3" type="text" /> 
+                {{ Createform.address_line3 }} 
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.tel_num.id_for_label }}" name="{{ Createform.tel_num.html_name }}" placeholder="Telephone" type="number" />
+                {{ Createform.tel_num }}
               </div>
               <div class="field">
-                <input class="field" id="{{ Createform.home_num.id_for_label }}" name="{{ Createform.home_num.html_name }}" placeholder="Home Number" type="number" />
+                {{ Createform.home_num }}
               </div>
             </div>
           </div>
-
-
+          
           <input class="btn btn-outline-dark" name="create_patient" type="submit" value="Create" />&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
         </form>
       {% else %}
