--- a/Project/DjangoProj/static/css/Custom/Patient_info2.css
+++ b/Project/DjangoProj/static/css/Custom/Patient_info2.css
@@ -58,6 +58,28 @@ body
   background-color: #f1f1f1;
 }
 
+.input_field
+{
+  width: 100%;
+  padding: 0.8em 0 0.5em 0.5em;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius: 4px;
+}
+
+.input_field:first-child
+{
+  margin-top: 0.2em;
+  margin-bottom: 0.3em;
+}
+
+.input_field:focus 
+{
+  border: 3px solid #555;
+}
+
 .main:after
 {
   content: "";
