--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar2.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Patient_info.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Patient_info2.css' %}">
 
   </head>
   <body>
@@ -67,21 +67,27 @@
             <div class="info">
             <h4>Patient Info</h4>
               <div class="field">
+                <label>Patient name:</label>
                 {{ Createform.patient_name }}
               </div>
               <div class="field">
+                <label>Date of birth:</label>
                 {{ Createform.DOB }}
               </div>
               <div class="field">
+                <label>Age:</label>
                 {{ Createform.age }}
               </div>
               <div class="field">
+                <label>Sex:</label>
                 {{ Createform.sex }}
               </div>
               <div class="field">
+                <label>Occupation:</label>
                 {{ Createform.occupation }} 
               </div>
               <div class="field">
+                <label>Marital status:</label>
                 {{ Createform.marital_status }}
               </div>
             </div>
@@ -90,24 +96,29 @@
             <div class="info">
             <h4>Contact Info</h4>
               <div class="field">
+                <label>Address Line 1:</label>
                 {{ Createform.address_line1 }}
               </div>
               <div class="field">
+                <label>Address Line 2:</label>
                 {{ Createform.address_line2 }}
               </div>
               <div class="field">
+                <label>Address Line 3:</label>
                 {{ Createform.address_line3 }} 
               </div>
               <div class="field">
+                <label>Telephone:</label>
                 {{ Createform.tel_num }}
               </div>
               <div class="field">
+                <label>Home phone number:</label>
                 {{ Createform.home_num }}
               </div>
             </div>
           </div>
           
-          <input class="btn btn-outline-dark" name="create_patient" type="submit" value="Create" />&nbsp;&nbsp;<a href="{% url 'logout' %}">Logout</a>
+          <input class="btn btn-outline-dark" name="create_patient" type="submit" value="Create" />
         </form>
       {% else %}
         <div class="left_section">
