--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar2.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Patient_info2.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Patient_info.css' %}">
 
   </head>
   <body>
@@ -197,9 +197,53 @@
         <div class="right_section">
           <div class="info">
             <h4>Medical Info</h4>
+            {% if medication is not None %}
+              <table class="table">
+                <thead class="thead-inverse">
+                  <tr class="bg-dark text-white">
+                    <th>Medication Name</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for med in medication %}
+                    <tr>
+                      <td class="align-middle">
+                       {{ med.name }}
+                      </td>
+                      <td class="align-middle">
+                        {{ med.description }}
+                      </td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            {% endif %}
+
+            <div class="field">
+              Ailments:
+              {% for ail in ailments %}
+                <div class="field_value" >
+                  {{ ail.name }}
+                </div>
+              {% endfor %}
+            </div>
+            <div class="field">
+              Allergies:
+              {% for all in allergies %}
+                <div class="field_value" >
+                  {{ all.name }}
+                </div>
+              {% endfor %}
+            </div>
+          </div>
+
+
+
+          <div class="info">
+            <h4>Reminders</h4>
 
             {% if reminders is not None %}
-              Active Reminders:
               <table class="table">
                 <thead class="thead-inverse">
                   <tr class="bg-dark text-white">
@@ -225,23 +269,10 @@
                 </tbody>
               </table>
             {% endif %}
-            <div class="field">
-              Ailments:
-              {% for ail in ailments %}
-                <div class="field_value" >
-                  {{ ail.name }}
-                </div>
-              {% endfor %}
-            </div>
-            <div class="field">
-              Allergies:
-              {% for all in allergies %}
-                <div class="field_value" >
-                  {{ all.name }}
-                </div>
-              {% endfor %}
-            </div>
           </div>
+
+
+
         </div>
       {% endif %}
     </div>
