--- a/Project/DjangoProj/static/css/Custom/Navbar3.css
+++ b/Project/DjangoProj/static/css/Custom/Navbar3.css
@@ -6,7 +6,7 @@
   padding-top: 0.1em;
   max-width: 7em;
   background-color: #f1f1f1;
-  position: fixed;
+  position: absolute;
   height: auto;
 }
 
@@ -31,13 +31,20 @@ li a
   max-width: 100%;
   max-height: 100%;
   margin: 0;
-  margin: 0.1em 0.1em 0.3em 0.1em;
+  margin: 0.0em 0.1em 0.3em 0.1em;
 }
 
 .navbar_logo img
 {
   width: 100%;
   height: auto;
+}
+
+.sticky 
+{
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li a.active 
