--- a/Project/DjangoProj/static/css/Custom/Patient.css
+++ b/Project/DjangoProj/static/css/Custom/Patient.css
@@ -137,7 +137,8 @@ body
 }
 
 /* Create Visit */
-.form-popup {
+.form-popup 
+{
   display: none;
   position: relative;
   border: 3px solid #f1f1f1;
@@ -145,28 +146,15 @@ body
   transition: 0.5s;
 }
 
-.form-container {
+.form-container 
+{
   max-width: 300px;
   padding: 10px;
   background-color: white;
 }
 
-.form-container input
+.create_visit_btn 
 {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-}
-
-.form-container input:focus
-{
-  background-color: #ddd;
-  outline: none;
-}
-
-.form-container .create_visit_btn {
   background-color: #4CAF50;
   color: white;
   padding: 16px 20px;
@@ -177,7 +165,8 @@ body
   opacity: 0.8;
 }
 
-.form-container .cancel {
+.cancel 
+{
   background-color: red;
 }
 
